# langchain-learning

./: .gitignore  README.md  pyproject.toml  test.py
module_0/: 01_first_llm_call.py  02_chat_roles_demo.py
module_02/: 01_prompt_template_demo.py  02_prompt_and_model.py  03_lcel_demo.py  07_pydantic_output_parser.py
module_1/: 04_chat_prompt_template.py  05_chat_prompt_and_model.py  06_str_output_parser.py
notes/: 01_foundations.md  02_langchain_core.md
projects/01_rag/: 01_load_pdf.py  02_chunking_demo.py  03A_vector_store_demo.py  03B_vector_store.py  04_retriever_demo.py  05_rag_chain.py  06_load_existing_db.py
projects/01_rag/chroma_db/: chroma.sqlite3
