[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
